# pyro-eval

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: config
data/: .gitignore  predictions.dvc  roc.dvc
data/models/: .gitignore  detectors.dvc
data/predictions/: Documents_Dev_Pyronear_pyro-eval_data_models_20250520_models_1024_best_1_weights_best.json
evaluation/: compare_metrics.py  data_structures.py  dataset.py  engine_evaluation.py  evaluation.py  launcher.py  model.py  model_evaluation.py  session_evaluation.py  utils.py  visualization.py
scripts/: .gitignore  compare_metrics.py  generate_report.py  grid_search.py  launcher.py  run_evaluation.py  text_pyronear.json  visualization.py
src/pyro_eval/: data_structures.py  dataset.py  engine_evaluation.py  evaluation.py  model.py  model_evaluation.py  path_manager.py  prediction_manager.py  utils.py
src/pyro_eval/app/: app.py  image_viewer.py  run_data.py
src/pyro_eval/comparison/: image_manager.py  image_viewer.py  metrics_app.py  run_data.py  status_tracking.py  utils.py
