[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyro-eval"
version = "0.1.0"
description = "Evaluation of Pyronear Models"
authors = [
    "Pyronear <contact@pyronear.org>"
]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
datasets = "*"
matplotlib = "3.10.0"
onnx = "1.17.0"
onnxruntime = "1.18.1"
pandas = "2.2.3"
python = ">=3.10,<4.0"
pyroengine = { git = "https://github.com/pyronear/pyro-engine.git", rev = "main"}
scikit-learn = "1.6.1"
streamlit = "1.45.0"
torchvision = "0.21.0"
ultralytics = "8.3.75"
gspread = "^6.2.1"
gspread-dataframe = "^4.0.0"
oauth2client = "^4.1.3"
onnxslim = "^0.1.53"

[tool.poetry.group.dev.dependencies]
pytest = "^5.3.2"
