[project]
name = "pyro-eval"
version = "0.1.0"
description = "Evaluation of Pyronear Models"
authors = [{ name = "Pyronear", email = "contact@pyronear.org" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "datasets",
    "matplotlib==3.9.0",
    "onnx==1.17.0",
    "onnxruntime==1.18.1",
    "pandas==2.2.3",
    "pyroengine",
    "scikit-learn==1.6.1",
    "streamlit==1.45.0",
    "torchvision==0.21.0",
    "ultralytics==8.3.75",
    "gspread>=6.2.1,<7",
    "gspread-dataframe>=4.0.0,<5",
    "oauth2client>=4.1.3,<5",
    "onnxslim>=0.1.53,<0.2",
    "pyroclient>=0.2.0.dev0",
    "ncnn>=1.0.20250503",
]

[dependency-groups]
dev = [
 "pytest>=5.3.2,<6",
 "dvc",
 "dvc-s3>=3.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyroengine = { git = "https://github.com/pyronear/pyro-engine.git", branch = "15bb1cd37bdaeb7cdfb37cee352217307028afa7" }
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", subdirectory = "client", rev = "main" }
reolink_api_client = { git = "https://github.com/pyronear/pyro-engine.git", branch = "develop", subdirectory = "reolink_api/client" }